mobile status bar fix

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
                 text-align: left;
             }
             .right {
-                padding-top: unset;
+                padding-top: 20px;
                 margin-left: unset;
             }
             .left {
