--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,7 @@
 <section class="main">
     <ul id="statusBar" class="status-bar">
         <li id="date"></li>
+        <li>vancouver, bc</li>
         <li id="temp"></li>
         <li id="text"></li>
     </ul>
