--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <section class="main">
     <ul id="statusBar" class="status-bar">
         <li id="date"></li>
-        <li>vancouver, bc</li>
+        <li id="latlong"></li>
         <li id="temp"></li>
         <li id="text"></li>
     </ul>
