--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,20 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
+<section class="surround">
+    <h1 class="neon">parseit</h1>
+    <article class="weather">
+        <p id="temp"></p>
+        <p id="text"></p>
+    </article>
+    <div id="threejs"></div>
+</section>
 <section class="main">
     <ul id="statusBar" class="status-bar">
         <li id="date"></li>
         <li id="latlong"></li>
-        <li id="temp"></li>
-        <li id="text"></li>
+        <li></li>
+        <li></li>
     </ul>
     <article class="left">
         <p id="one" class="one">JavaScript sends form data to an iframe iframe send data to a PHP script PHP script uploads image to server JavaScript displays the uploaded image</p>
@@ -36,5 +44,32 @@
 </section>
 <!-- index javascript -->
 <script src="js/index.js"></script>
+<script src="js/three.js"></script>
+<script>
+  var scene = new THREE.Scene();
+  var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
+
+  var renderer = new THREE.WebGLRenderer();
+  renderer.setSize( window.innerWidth, window.innerHeight );
+  document.body.appendChild( renderer.domElement );
+
+  var geometry = new THREE.BoxGeometry( 1, 1, 1 );
+  var material = new THREE.MeshBasicMaterial( { color: 0xFFDD1B } );
+  var cube = new THREE.Mesh( geometry, material );
+  scene.add( cube );
+
+  camera.position.z = 5;
+
+  var animate = function () {
+    requestAnimationFrame( animate );
+
+    cube.rotation.x += 0.1;
+    cube.rotation.y += 0.1;
+
+    renderer.render(scene, camera);
+  };
+
+  animate();
+</script>
 </body>
 </html>
