--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
             <p id="temp"></p>
             <p id="text"></p>
             <p id="date"></p>
+            <p><a href="resume.txt">resume</a></p>
         </article>
     </section>
 <!-- index javascript -->
