--- a/public/resume.html
+++ b/public/resume.html
@@ -3,8 +3,193 @@
 <head>
     <meta charset="UTF-8">
     <title>resume</title>
+    <meta name="description" content="coleman jackson's portfolio">
+    <meta name="keywords" content="coleman jackson, html, css, javascript, portfolio">
+    <meta name="author" content="coleman jackson">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-<h1>resume</h1>
+    <section class="resume">
+        <h1 class="neon">coleman jackson</h1>
+        <article class="group">
+            <p>604-785-3328</p>
+            <p>Vancouver, BC</p>
+            <p>4987569@gmail.com</p>
+            <p>parseit.co</p>
+            <p>gitbub.com/campstove</p>
+        </article>
+
+        <table>
+            <tr colspan="3">
+                <th class="caps">Education</th>
+            </tr>
+            <tr>
+                <th colspan="2">Vancouver Institute of Media Arts, Vancouver, BC</th>
+            </tr>
+            <tr>
+                <td colspan="2">Web Development & Interactive Design</td>
+                <td>2017 – 2018</td>
+            </tr>
+            <tr>
+                <td colspan="2">Professional Photography</td>
+                <td>2016 – 2017</td>
+            </tr>
+            <tr>
+                <th colspan="2">Penticton Secondary School, Penticton, BC</th>
+                <th>2012 – 2016</th>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Top Photography Student</li>
+                        <li>Top Senior Service Award</li>
+                        <li>Citizenship Award</li>
+                        <li>Honors in Grades 9, 10 and 11</li>
+                        <li>Automotive Technology 12</li>
+                        <li>Top Junior Metalwork Student – Grade 9</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr colspan="3">
+                <th class="caps">Work Experience</th>
+            </tr>
+            <tr>
+                <th>Lot Attendant</th>
+                <th>Parker’s Chrysler Dodge-Jeep, Penticton, BC</th>
+                <th>2016</th>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Maintain lot for customer viewing</li>
+                        <li>Clean and prepare vehicles for delivery to client</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <th>Photographer</th>
+                <th>Penticton Herald, Penticton, BC</th>
+                <th>2014 - 2016</th>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Sporting events - Basketball, Volleyball, Triathalons</li>
+                        <li>NHL Young Stars Tournament</li>
+                        <li>Concerts - Florida Georgia Line, Emerson Drive, Marilyn Manson</li>
+                        <li>Penticton Secondary School Graduations</li>
+                        <li>702 photos published</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <th>Photographer</th>
+                <th>Penticton Secondary School, Penticton, BC</th>
+                <th>2015 - 2016</th>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Photograph for the Yearbook</li>
+                        <li>Photograph for the School’s Strategic Plan</li>
+                        <li>Sporting events</li>
+                        <li>Athletic and Academic Award Ceremonies</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <th>Photographer</th>
+                <th>Penticton Speedway, Penticton, BC</th>
+                <th>2015</th>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Photograph Flying Eve of Destruction</li>
+                        <li>Photo printed on advertising brochure</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <th>Photographer</th>
+                <th>Royal LePage Realty, Penticton, BC</th>
+                <th>2014</th>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Photograph interior and exterior of homes for listing</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <th>Photographer</th>
+                <th>Cystic Fibrosis Canada, Penticton, BC</th>
+                <th>2014</th>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Photograph fundraising event</li>
+                        <li>Silent and Live Auction items</li>
+                        <li>Candid shots of guests</li>
+                        <li>Photographs published on CF Canada website</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <th>Assistant</th>
+                <th>Vancouver Sports Pictures, Penticton, BC</th>
+                <th>2013</th>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Take individual in-game photos</li>
+                        <li>Culled and Edited team photos</li>
+                        <li>Take and fill team orders</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+
+        <h3 class="caps">Languages</h3>
+        HTML 5/CSS 3        Javascript          PHP         Node.js         XML/JSON
+        Bootstrap           jQuery              Laravel     angularJS       MySQL
+
+        <h3 class="caps">Additional Skills</h3>
+        Software - Adobe Suite
+        Software - Sketch
+        Software – ALLDATA
+        OS - MacOS High Sierra
+
+
+        <h3 class="caps">References</h3>
+
+        Jeff Vinnick                                Alan Stel
+        Jeff Vinnick Images                         Summerland Secondary School
+        Professional Photographer                   Principal
+        4056 West 29th Avenue                       9518 Main Street
+        Vancouver, BC V6S 1V5                       Summerland, BC V0H 1Z0
+        604.230.6350                                250.770.7650
+
+
+        James Miller                                Kevin McGifford
+        Penticton Herald                            Penticton Secondary School
+        Valley Wide Editor                          Automotive Teacher
+        101 - 186 Nanaimo Ave West                  158 Eckhardt Avenue East
+        Penticton, BC V2A 1N4                       Penticton, BC V2A 1Z3
+        250.490.0880 Ext. 300                       250.770.7750
+
+
+        Gord Barnes                                 Rick Olmstead
+        Penticton Secondary School                  Parker’s Chrysler Dodge-Jeep
+        Digital Photography/Media Teacher           General Sales Manager
+        158 Eckhardt Avenue East                    1765 Main Street
+        Penticton, BC V2A 1Z3                       Penticton, BC V2A 5H1
+        250.770.7750                                250.492.2839
+    </section>
 </body>
 </html>
