--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="surround">
         <h1 class="neon">parseit</h1>
-        <article class="weather">
+        <article class="group">
             <p id="temp"></p>
             <p id="text"></p>
             <p id="date"></p>
