resume clean up

--- a/public/resume.html
+++ b/public/resume.html
@@ -16,25 +16,26 @@
         <article class="group">
             <p>604-785-3328</p>
             <p>Vancouver, BC</p>
-            <p>4987569@gmail.com</p>
-            <p>parseit.co</p>
-            <p>gitbub.com/campstove</p>
+            <p><a href="mailto:4987569@gmail.com?Subject=parseit">4987569@gmail.com</a></p>
+            <p><a href="https://parseit.co">parseit.co</a></p>
+            <p><a href="https://github.com/campstove" target="_blank">github.com/campstove</a></p>
         </article>
 
         <table>
             <tr colspan="3">
-                <th class="caps">Education</th>
+                <th class="bold">Education</th>
             </tr>
             <tr>
                 <th colspan="2">Vancouver Institute of Media Arts, Vancouver, BC</th>
+                <th>2016 – 2018</th>
             </tr>
             <tr>
-                <td colspan="2">Web Development & Interactive Design</td>
-                <td>2017 – 2018</td>
-            </tr>
-            <tr>
-                <td colspan="2">Professional Photography</td>
-                <td>2016 – 2017</td>
+                <td colspan="2">
+                    <ul>
+                        <li>Web Development & Interactive Design</li>
+                        <li>Professional Photography</li>
+                    </ul>
+                </td>
             </tr>
             <tr>
                 <th colspan="2">Penticton Secondary School, Penticton, BC</th>
@@ -53,7 +54,7 @@
                 </td>
             </tr>
             <tr colspan="3">
-                <th class="caps">Work Experience</th>
+                <th class="bold">Work Experience</th>
             </tr>
             <tr>
                 <th>Lot Attendant</th>
@@ -92,8 +93,8 @@
             <tr>
                 <td colspan="2">
                     <ul>
-                        <li>Photograph for the Yearbook</li>
-                        <li>Photograph for the School’s Strategic Plan</li>
+                        <li>Yearbook</li>
+                        <li>School’s Strategic Plan</li>
                         <li>Sporting events</li>
                         <li>Athletic and Academic Award Ceremonies</li>
                     </ul>
@@ -153,43 +154,113 @@
                     </ul>
                 </td>
             </tr>
+            <tr colspan="3">
+                <th class="bold">Languages</th>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>HTML 5/CSS 3</li>
+                        <li>Javascript</li>
+                        <li>PHP</li>
+                        <li>Node.js</li>
+                        <li>XML/JSON</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Bootstrap</li>
+                        <li>jQuery</li>
+                        <li>Laravel</li>
+                        <li>angularJS</li>
+                        <li>MySQL</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr colspan="3">
+                <th class="bold">Additional Skills</th>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Software - Adobe Suite</li>
+                        <li>Software - Sketch</li>
+                        <li>Software – ALLDATA</li>
+                        <li>OS - MacOS High Sierra</li>
+                        <li>Driver’s Licence</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr colspan="3">
+                <th class="bold">References</th>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Jeff Vinnick</li>
+                        <li>Jeff Vinnick Images</li>
+                        <li>Professional Photographer</li>
+                        <li>4056 West 29th Avenue</li>
+                        <li>Vancouver, BC V6S 1V5</li>
+                        <li>604.230.6350</li>
+                    </ul>
+                </td>
+                <td colspan="2">
+                    <ul>
+                        <li>Alan Stel</li>
+                        <li>Summerland Secondary School</li>
+                        <li>Principal</li>
+                        <li>9518 Main Street</li>
+                        <li>Summerland, BC V0H 1Z0</li>
+                        <li>250.770.7650</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>James Miller</li>
+                        <li>Penticton Herald</li>
+                        <li>Valley Wide Editor</li>
+                        <li>101 - 186 Nanaimo Ave West</li>
+                        <li>Penticton, BC V2A 1N4</li>
+                        <li>250.490.0880 Ext. 300</li>
+                    </ul>
+                </td>
+                <td colspan="2">
+                    <ul>
+                        <li>Kevin McGifford</li>
+                        <li>Penticton Secondary School</li>
+                        <li>Automotive Teacher</li>
+                        <li>158 Eckhardt Avenue East</li>
+                        <li>Penticton, BC V2A 1Z3</li>
+                        <li>250.770.7750</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Gord Barnes</li>
+                        <li>Penticton Secondary School</li>
+                        <li>Digital Photography/Media Teacher</li>
+                        <li>158 Eckhardt Avenue East</li>
+                        <li>Penticton, BC V2A 1Z3</li>
+                        <li>250.770.7750</li>
+                    </ul>
+                </td>
+                <td colspan="2">
+                    <ul>
+                        <li>Rick Olmstead</li>
+                        <li>Parker’s Chrysler Dodge-Jeep</li>
+                        <li>General Sales Manager</li>
+                        <li>1765 Main Street</li>
+                        <li>Penticton, BC V2A 5H1</li>
+                        <li>250.492.2839</li>
+                    </ul>
+                </td>
+            </tr>
         </table>
-
-        <h3 class="caps">Languages</h3>
-        HTML 5/CSS 3        Javascript          PHP         Node.js         XML/JSON
-        Bootstrap           jQuery              Laravel     angularJS       MySQL
-
-        <h3 class="caps">Additional Skills</h3>
-        Software - Adobe Suite
-        Software - Sketch
-        Software – ALLDATA
-        OS - MacOS High Sierra
-
-
-        <h3 class="caps">References</h3>
-
-        Jeff Vinnick                                Alan Stel
-        Jeff Vinnick Images                         Summerland Secondary School
-        Professional Photographer                   Principal
-        4056 West 29th Avenue                       9518 Main Street
-        Vancouver, BC V6S 1V5                       Summerland, BC V0H 1Z0
-        604.230.6350                                250.770.7650
-
-
-        James Miller                                Kevin McGifford
-        Penticton Herald                            Penticton Secondary School
-        Valley Wide Editor                          Automotive Teacher
-        101 - 186 Nanaimo Ave West                  158 Eckhardt Avenue East
-        Penticton, BC V2A 1N4                       Penticton, BC V2A 1Z3
-        250.490.0880 Ext. 300                       250.770.7750
-
-
-        Gord Barnes                                 Rick Olmstead
-        Penticton Secondary School                  Parker’s Chrysler Dodge-Jeep
-        Digital Photography/Media Teacher           General Sales Manager
-        158 Eckhardt Avenue East                    1765 Main Street
-        Penticton, BC V2A 1Z3                       Penticton, BC V2A 5H1
-        250.770.7750                                250.492.2839
     </section>
 </body>
 </html>
