--- a/public/resume.html
+++ b/public/resume.html
@@ -17,7 +17,7 @@
             <p>604-785-3328</p>
             <p>Vancouver, BC</p>
             <p><a href="mailto:4987569@gmail.com?Subject=parseit">4987569@gmail.com</a></p>
-            <p><a href="https://parseit.co">parseit.co</a></p>
+            <p><a href="https://parseit.co/">parseit.co</a></p>
             <p><a href="https://github.com/campstove" target="_blank">github.com/campstove</a></p>
         </article>
 
@@ -34,6 +34,7 @@
                     <ul>
                         <li>Web Development & Interactive Design</li>
                         <li>Professional Photography</li>
+                        <li>Scholarship received</li>
                     </ul>
                 </td>
             </tr>
@@ -44,10 +45,10 @@
             <tr>
                 <td colspan="2">
                     <ul>
-                        <li>Top Photography Student</li>
+                        <li>Top Photography Student - Grades 10 & 11</li>
                         <li>Top Senior Service Award</li>
                         <li>Citizenship Award</li>
-                        <li>Honors in Grades 9, 10 and 11</li>
+                        <li>Honors - Grades 9, 10 and 1)</li>
                         <li>Automotive Technology 12</li>
                         <li>Top Junior Metalwork Student – Grade 9</li>
                     </ul>
