--- a/public/resume.html
+++ b/public/resume.html
@@ -149,7 +149,7 @@
                 <td colspan="2">
                     <ul>
                         <li>Take individual in-game photos</li>
-                        <li>Culled and Edited team photos</li>
+                        <li>Culled and edited team photos</li>
                         <li>Take and fill team orders</li>
                     </ul>
                 </td>
