--- a/public/resume.html
+++ b/public/resume.html
@@ -204,7 +204,7 @@
                 </td>
                 <td>
                     <ul>
-                        <li>OS - MacOS High Sierra</li>
+                        <li>MacOS High Sierra</li>
                         <li>Driver’s Licence</li>
                         <li>Wordpress</li>
                     </ul>
