--- a/public/resume.html
+++ b/public/resume.html
@@ -197,16 +197,16 @@
             <tr>
                 <td>
                     <ul>
+                        <li>Wordpress</li>
                         <li>Adobe Suite</li>
                         <li>Sketch</li>
-                        <li>ALLDATA</li>
                     </ul>
                 </td>
                 <td>
                     <ul>
                         <li>MacOS High Sierra</li>
+                        <li>ALLDATA</li>
                         <li>Driver’s Licence</li>
-                        <li>Wordpress</li>
                     </ul>
                 </td>
             </tr>
@@ -281,5 +281,6 @@
             </tr>
         </table>
     </section>
+    <footer></footer>
 </body>
 </html>
