--- a/public/resume.html
+++ b/public/resume.html
@@ -197,15 +197,15 @@
             <tr>
                 <td>
                     <ul>
+                        <li>git</li>
                         <li>Wordpress</li>
-                        <li>Adobe Suite</li>
                         <li>Sketch</li>
                     </ul>
                 </td>
                 <td>
                     <ul>
+                        <li>Adobe Creative Cloud</li>
                         <li>MacOS High Sierra</li>
-                        <li>ALLDATA</li>
                         <li>Driver’s Licence</li>
                     </ul>
                 </td>
