--- a/public/resume.html
+++ b/public/resume.html
@@ -197,7 +197,7 @@
             <tr>
                 <td>
                     <ul>
-                        <li>git</li>
+                        <li>Git</li>
                         <li>Wordpress</li>
                         <li>Sketch</li>
                     </ul>
