--- a/public/resume.html
+++ b/public/resume.html
@@ -198,7 +198,7 @@
                 <td>
                     <ul>
                         <li>Git</li>
-                        <li>Wordpress</li>
+                        <li>WordPress</li>
                         <li>Sketch</li>
                     </ul>
                 </td>
